--- a/src/admin_home.html
+++ b/src/admin_home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,7 @@
             * {
                 box-sizing: border-box;
             }
-            
+
             header {
                 background-color: #666;
                 padding: 30px;
@@ -16,27 +17,34 @@
                 font-size: 35px;
                 color: white;
             }
+
             section::after {
                 content: "";
                 display: table;
                 clear: both;
             }
+
             button {
                 float: left;
                 width: 30%;
-                height: 300px; /* only for demonstration, should be removed */
+                height: 300px;
+                /* only for demonstration, should be removed */
                 background: #ccc;
                 padding: 20px;
-            }   
+            }
+
             form {
                 float: left;
                 padding: 20px;
                 width: 70%;
                 background-color: #f1f1f1;
-                height: 300px; /* only for demonstration, should be removed */
-            }     
+                height: 300px;
+                /* only for demonstration, should be removed */
+            }
+
         </style>
     </head>
+
     <body>
         <header>
             <h1>Admin Dashboard</h1>
@@ -44,15 +52,15 @@
         <div id="loader">
             <p id="text-center">Loading...</p>
         </div>
-        <div  >
+        <div>
             <section id="content">
-                <div >
+                <div>
                     <button type="button" name="create_election" class="admin_create_election">
                         <a href="/create_election.html">Create Election</a>
                     </button>
 
                 </div>
-                <div >
+                <div>
                     <form onsubmit="App.manage_election_event" class="admin_manage_elections">
                         <label for="manage_elections">Choose an Election</label>
                         <select name="manage_elections" id="manage_elections">
@@ -69,6 +77,7 @@
         <script src="js/bootstrap.min.js"></script>
         <script src="js/web3.min.js"></script>
         <script src="js/truffle-contract.js"></script>
-        <script src="js/admin_home.js"></script>
+        <script src="js/app.js"></script>
     </body>
+
 </html>
