Contract modified and voter dashboard added

--- a/src/index.html
+++ b/src/index.html
@@ -23,12 +23,9 @@
     <div class="container" style="width: 650px;">
       <div class="row">
         <div class="col-lg-12">
-          <h1 class="text-center">Election Results</h1>
+          <h1 class="text-center">Home/Login Page</h1>
           <hr />
           <br />
-          <div id="loader">
-            <p class="text-center">Loading...</p>
-          </div>
           <div id="content" style="display: none;">
             <table class="table">
               <thead>
