Apply for canddiacy done

--- a/src/Voter.html
+++ b/src/Voter.html
@@ -26,8 +26,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Campaigning Portal</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Apply for candidacy</a>
+                        <li class="nav-item" id="applyforcandidacy">
                         </li>
                         <li class="nav-item" id="report">
                         </li>
