Admin can now edit the election info

--- a/src/admin_manage_election.html
+++ b/src/admin_manage_election.html
@@ -34,9 +34,9 @@
             form {
                 float: left;
                 padding: 20px;
-                width: 20%;
+                width: 25%;
                 background-color: #f1f1f1;
-                height: 300px;
+                height: 400px;
                 /* only for demonstration, should be removed */
             }
 
@@ -47,7 +47,30 @@
         <header>
             <h1>Manage Election</h1>
         </header>
-        <p>Election Data</p>
+        <form id="edit_election_form" onSubmit="App.edit_election_event(); return false">
+            <label for="E_name">Election Name: </label>
+            <input type="text" id="E_name" name="E_name"><br><br>
+            <label for="date_cand_register_end">Date until which Candidates can register: </label>
+            <input type="date" id="date_cand_register_end" name="date_cand_register_end"><br><br>
+
+            <label for="time_cand_register_end">Time until which Candidates can register: </label>
+            <input type="time" id="time_cand_register_end" name="time_cand_register_end"><br><br>
+
+            <label for="date_polling_starts">Date when the polling will begin: </label>
+            <input type="date" id="date_polling_starts" name="date_polling_starts"><br><br>
+
+            <label for="time_polling_starts">Time when the polling will begin: </label>
+            <input type="time" id="time_polling_starts" name="time_polling_starts"><br><br>
+
+
+            <label for="date_polling_ends">Date when the polling will end: </label>
+            <input type="date" id="date_polling_ends" name="date_polling_ends"><br><br>
+
+            <label for="time_polling_ends">Time when the polling will end: </label>
+            <input type="time" id="time_polling_ends" name="time_polling_ends"><br><br>
+
+            <input type="submit" name="submit" id="submit">
+        </form>
         <form onSubmit="App.admin_add_voter_page_event(); return false" class="admin_add_voter_event">
             <button type="submit">Add Voters</button>
         </form>
