--- a/src/candidate.html
+++ b/src/candidate.html
@@ -5,11 +5,16 @@
         <title></title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+        <style>
+            .navbar-custom {
+                background-color: black;
+            }
 
+        </style>
     </head>
 
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <body class="bg-dark container-fluid m-0">
+        <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
             <div class="container-fluid">
                 <a class="navbar-brand" href="http://localhost:3000">Online Election Portal</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -33,9 +38,36 @@
             </div>
         </nav>
         <div>
-            <header style="text-align: center;">
-                <h1>Candidate DashBoard</h1>
-            </header>
+            <div>
+                <div class="text-center row mt-5">
+                    <div class="col-lg-3"></div>
+                    <div class="card col-lg-6 mt-5">
+                        <div class="card-body mt-2">
+                            <h3 class="card-title">About Election</h3>
+                            <div class="m-b-25"> <img src="//img.icons8.com/fluent/96/000000/test-account.png"
+                                    class="img-radius" alt="User-Profile-Image"> </div>
+                            <div>
+                                <label for="id"><b>User ID:</b></label>
+                                <span class="card-text" id="id"></span>
+                            </div>
+                            <div>
+                                <label for="name"><b>User Name:</b></label>
+                                <span class="card-text" id="name"></span>
+                            </div>
+                            <div>
+                                <label for="email"><b>Email:</b></label>
+                                <span class="card-text" id="email"></span>
+                            </div>
+                            <div>
+                                <label for="address"><b>Account:</b></label>
+                                <span class="card-text" id="address"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3"></div>
+
+                </div>
+            </div>
         </div>
 
 
