--- a/src/candidate.html
+++ b/src/candidate.html
@@ -24,7 +24,7 @@
                         <li class="nav-item" id="vote">
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Campaigning Portal</a>
+                            <a class="nav-link" href="./campaign.html#manage_elections=1">Campaigning Portal</a>
                         </li>
                         <li class="nav-item" id="report">
                         </li>
@@ -41,8 +41,9 @@
 
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
         <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="https://npmcdn.com/ipfs-api/dist/index.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
             crossorigin="anonymous"></script>
