--- a/src/Voter.html
+++ b/src/Voter.html
@@ -24,7 +24,7 @@
                         <li class="nav-item" id="vote">
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./campaign.html">Campaigning Portal</a>
+                            <a class="nav-link" href="./campaign.html#manage_elections=1">Campaigning Portal</a>
                         </li>
                         <li class="nav-item" id="applyforcandidacy">
                         </li>
