--- a/src/new_campaign.html
+++ b/src/new_campaign.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <title></title>
+        <title>Campaigning</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
@@ -35,13 +35,13 @@
             </div>
         </nav>
         <header style="text-align: center;">
-            <h1>Apply for candidacy</h1>
+            <h1>Campaigning Page</h1>
         </header>
         <br /> <br />
         <div class="container row">
             <div class="col-lg-2"></div>
             <div class="col-lg-8">
-                <form onSubmit="App.applyForCandidacy(); return false;">
+                <!-- <form onSubmit="App.applyForCandidacy(); return false;">
                     <div class="form-group">
                         <label for="username">User Name</label>
                         <input type="text" id="username" required />
@@ -59,9 +59,13 @@
                         <button type="submit" id="submit" class="btn btn-primary">Apply</button>
                         <hr />
 
-                    </div>
+                    </div> 
 
-                </form>
+
+                </form> -->
+                <ul id='campaign'>
+                    <li></li>
+                </ul>
             </div>
 
             <div class="col-lg-2"></div>
