--- a/src/applyforcandidacy.html
+++ b/src/applyforcandidacy.html
@@ -48,7 +48,7 @@
                         <br /> <br />
                         <textarea id="info" rows="5" cols="50" required>Add info about yourself here.</textarea>
                         <br><br>
-                        <textarea id="description" rows="10" cols="50" required>Add your Campaigning Descripiton here</textarea>
+                        <!-- <textarea id="description" rows="10" cols="50" required>Add your Campaigning Descripiton here</textarea> -->
                         <div>
                             <input type="checkbox" id="tnc" value="agree" required />
                             <span>I hereby agree to all the terms and conditions and abide by the code of conduct for
