Every page now checks for user credentials before loading

--- a/src/admin_accept_reports.html
+++ b/src/admin_accept_reports.html
@@ -63,7 +63,7 @@
                 <div>
                     <form onSubmit="App.admin_accept_report(); return false" class="admin_accept_report">
                         <label for="add_to_reported">Choose a Report</label>
-                        <select name="add_to_reported" id="add_to_reported">
+                        <select name="add_to_reported" id="add_to_reported" required>
                         <input type="submit" id="submit">
                         </select>
                     </form>
