--- a/src/admin_add_candidate.html
+++ b/src/admin_add_candidate.html
@@ -63,7 +63,7 @@
                 <div>
                     <form onSubmit="App.admin_add_candidate()" class="admin_add_candidate_event">
                         <label for="add_candidate">Choose a candidate</label>
-                        <select name="add_candidate" id="add_candidate">
+                        <select name="add_candidate" id="add_candidate" required>
 
                             <input type="submit" name="submit" id="submit">
                         </select>
