--- a/src/admin_add_voter.html
+++ b/src/admin_add_voter.html
@@ -63,7 +63,7 @@
                 <div>
                     <form onSubmit="App.admin_add_voter(); return false" class="admin_add_voter">
                         <label for="add_voter">Choose a Voter</label>
-                        <select name="add_voter" id="add_voter">
+                        <select name="add_voter" id="add_voter" required>
                             <input type="submit" id="submit">
                         </select>
                     </form>
