--- a/src/admin_home.html
+++ b/src/admin_home.html
@@ -63,7 +63,7 @@
                 <div>
                     <form onSubmit="App.manage_election_event(); return false;" class="admin_manage_elections">
                         <label for="manage_elections">Choose an Election</label>
-                        <select name="manage_elections" id="manage_elections">
+                        <select name="manage_elections" id="manage_elections" required>
 
                         </select>
                         <input type="submit" id="submit">
