--- a/src/index.html
+++ b/src/index.html
@@ -27,9 +27,9 @@
         <form onSubmit="App.login(); return false;  ">
             <legend><h2>Enter User ID and password to Login</h2></legend>
             <label for="u_id">User ID</label>
-            <input type="number" id="u_id" /><br>
+            <input type="number" id="u_id" required /><br>
             <label for="pwd">Password</label>
-            <input type="password" id="pwd" /><br><br>
+            <input type="password" id="pwd" required /><br><br>
             <button type="submit" className="btn btn-success btn-block btn-lg">Login</button>
         </form>
         <br><br><br>
