--- a/src/report.html
+++ b/src/report.html
@@ -53,10 +53,10 @@
                                 <label for="UserSelect">
                                     <h6>Select User</h6>
                                 </label><br />
-                                <select class="form-control" id="UserSelect">
+                                <select class="form-control" id="UserSelect" required>
                                 </select>
                                 <br />
-                                <textarea id="reason" rows="10" cols="57" placeholder="Reason For Report"></textarea>
+                                <textarea id="reason" rows="10" cols="57" placeholder="Reason For Report" required></textarea>
                                 <br /> <br />
                                 <button type="submit" class="btn btn-primary">Report</button>
                                 <hr />
