--- a/src/voter_home.html
+++ b/src/voter_home.html
@@ -82,7 +82,7 @@
                             <label for="getElectionList">
                                 Choose an Election
                             </label>
-                            <select name="manage_elections" id="getElectionList">
+                            <select name="manage_elections" id="getElectionList" required>
 
                             </select>
                             <hr />
