--- a/src/register.html
+++ b/src/register.html
@@ -27,11 +27,13 @@
         <form onSubmit="App.register(); return false;">
             <legend><h2>Enter Your Details to Register</h2></legend>
             <label for="name">Name:</label>
-            <input type="text" id="name" /><br>
+            <input type="text" id="name" required /><br>
             <label for="mail">E-mail:</label>
-            <input type="email" id="mail" /><br>
+            <input type="email" id="mail" required /><br>
             <label for="pwd">Password</label>
-            <input type="password" id="pwd" /><br><br>
+            <input type="password" id="pwd" required /><br><br>
+            <label for="pwd">Confirm Password</label>
+            <input type="password" id="confirm_pwd" required /><br><br>
             <button type="submit" className="btn btn-success btn-block btn-lg">Register</button>
         </form>
         <br><br><br>
