--- a/src/candidate.html
+++ b/src/candidate.html
@@ -30,7 +30,7 @@
                         <li class="nav-item" id="vote">
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Campaigning Portal</a>
+                            <a class="nav-link" href="campaign.html#manage_elections=1">Campaigning Portal</a>
                         </li>
                         <li class="nav-item" id="report">
                         </li>
