--- a/src/applyforcandidacy.html
+++ b/src/applyforcandidacy.html
@@ -29,8 +29,8 @@
                         </li>
                         <li class="nav-item" id="vote">
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Campaigning Portal</a>
+                        <li class="nav-item" id="campaign">
+                            <!-- <a class="nav-link" href="#">Campaigning Portal</a> -->
                         </li>
                         <li class="nav-item" id="applyforcandidacy">
                         </li>
