--- a/src/campaign.html
+++ b/src/campaign.html
@@ -4,6 +4,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <title>Campaign Portal</title>
     </head>
     <body>
@@ -16,13 +18,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="http://localhost:3000">Home</a>
+                        <li class="nav-item" id="home">
+                            <!-- <a class="nav-link active" aria-current="page" href="http://localhost:3000">Home</a> -->
                         </li>
                         <li class="nav-item" id="vote">
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Campaigning Portal</a>
                         </li>
                         <li class="nav-item" id="applyforcandidacy">
                         </li>
