--- a/src/candidate.html
+++ b/src/candidate.html
@@ -29,8 +29,8 @@
                         </li>
                         <li class="nav-item" id="vote">
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="campaign.html#manage_elections=1">Campaigning Portal</a>
+                        <li class="nav-item" id="campaign">
+                            <!-- <a class="nav-link" href="campaign.html#manage_elections=1">Campaigning Portal</a> -->
                         </li>
                         <li class="nav-item" id="report">
                         </li>
